--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-23  Richard Henderson  <rth@redhat.com>
+
+	* real.c (do_multiply): Normalize U before addition.
+
 2002-09-23  Mark Mitchell  <mark@codesourcery.com>
 
 	* c-common.c (flag_abi_version): New variable.
