--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2002-09-23  Hans-Peter Nilsson  <hp@axis.com>
+
+	* gcc.dg/20020919-1.c: New test.
+
 2002-09-23  Mark Mitchell  <mark@codesourcery.com>
 
 	* g++.dg/abi/bitfield6.C: New test.
