--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -1258,6 +1258,8 @@ version that conforms most closely to the C++ ABI specification.
 Therefore, the ABI obtained using version 0 will change as ABI bugs are
 fixed.
 
+The default is version 1.
+
 @item -fno-access-control
 @opindex fno-access-control
 Turn off all access checking.  This switch is mainly useful for working
