--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-09-23  Richard Earnshaw  <rearnsha@arm.com>
+
+	* arm/unknown-elf.h (ASM_OUTPUT_ALIGNED_DECL_LOCAL): Always allocate
+	at least one byte of space.
+
 2002-09-23  Mark Mitchell  <mark@codesourcery.com>
 
 	* c-common.h (flag_abi_version): Fix typo in comment.
