--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,13 @@
+2002-09-22  Tom Tromey  <tromey@redhat.com>
+
+	Fix for PR libgcj/6576:
+	* java/util/ResourceBundle.java (tryBundle): Cache `null' if we
+	didn't find a given bundle.
+	(getBundle): Don't require base bundle.
+	(setParent): Removed old comment.
+	(tryLocalBundle): Try components even if preceding components were
+	empty.
+
 2002-09-22  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* Makefile.am (all-multi): Fix multilib parallel build.
