--- a/boehm-gc/ChangeLog
+++ b/boehm-gc/ChangeLog
@@ -1,3 +1,7 @@
+2002-08-23  Adam Megacz <adam@xwt.org>
+
+        * Removed extraneous ABORT()
+
 2002-08-14  Release Manager
 
 	* GCC 3.2 Released.
