--- a/gcc/f/ChangeLog
+++ b/gcc/f/ChangeLog
@@ -1,3 +1,14 @@
+2002-09-23  Zack Weinberg  <zack@codesourcery.com>
+
+	* Make-lang.in (g77spec.o): Don't depend on f/version.h.
+	(f/parse.o): Depend on version.h not f/version.h.
+	(g77version.o, f/version.o): Delete all references.
+
+	* com.c (ffecom_init_0): Fix transposed array indices in bsearch test.
+	* g77spec.c: Don't include f/version.h or refer to ffe_version_string.
+	* parse.c: Use version_string, not ffe_version_string.
+	* version.c, version.h: Delete files.
+
 2002-09-23  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* ChangeLog: Follow spelling conventions.
@@ -38,7 +49,7 @@
 	* bugs.texi (Known Bugs): Refer to gcc.gnu.org instead of
 	www.gnu.org for onlinedocs.
 	* news.texi (News): Ditto.
-	
+
 2002-09-07  Jan Hubicka  <jh@suse.cz>
 
 	* com.c (ffe_type_for_mode): Handle long double.
