--- a/libf2c/ChangeLog
+++ b/libf2c/ChangeLog
@@ -1,3 +1,14 @@
+2002-09-23  Zack Weinberg  <zack@codesourcery.com>
+
+	* libF77/Version.c: Rename junk to __LIBF77_VERSION__.  Add
+	external decls for __LIBI77_VERSION__ and __LIBU77_VERSION__.
+	Delete __G77_LIBF77_VERSION__
+	(g77__fvers__): Print all three __LIB*77_VERSION__ strings,
+	and __VERSION__ if we have it; nothing else.
+
+	* libI77/Version.c: Provide only __LIBI77_VERSION__ (formerly junk).
+	* libU77/Version.c: Provide only __LIBU77_VERSION__ (formerly junk).
+
 Sun Sep 22 23:43:37 2002  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* Makefile.in (all): Fix multilib parallel build.
@@ -199,7 +210,7 @@ Mon May 20 13:03:54 2002  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 2002-05-02  Alexandre Oliva  <aoliva@redhat.com>
 
-        * Makefile.in: Fix for multilibbed natives.
+	* Makefile.in: Fix for multilibbed natives.
 
 2002-04-15  Loren J. Rittle  <ljrittle@acm.org>
 
@@ -353,7 +364,7 @@ Mon May 20 13:03:54 2002  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 	of shared libf2c to 0:0:0.
 
 2001-09-29  Juergen Pfeifer  <juergen.pfeifer@gmx.net>
-            Toon Moene  <toon@moene.indiv.nluug.nl>
+	    Toon Moene  <toon@moene.indiv.nluug.nl>
 
 	Make libf2c a shared library.
 
@@ -427,7 +438,7 @@ Wed Jul 18 11:14:33 2001  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 	* libI77/Makefile.in: Add necessary dependencies on config.h.
 
 2001-07-06  Toon Moene  <toon@moene.indiv.nluug.nl>
-            Pedro Vazquez  <vazquez@penelope.iqm.unicamp.br>
+	    Pedro Vazquez  <vazquez@penelope.iqm.unicamp.br>
 
 	* libI77/configure.in: Check for fseeko, ftello.
 	* libI77/configure: Rebuilt.
@@ -454,7 +465,7 @@ Wed Jul 18 11:14:33 2001  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 	* libI77/fio.h: Include <sys/types.h> for off_t.
 
 2001-07-01  Toon Moene  <toon@moene.indiv.nluug.nl>
-            Pedro Vazquez  <vazquez@penelope.iqm.unicamp.br>
+	    Pedro Vazquez  <vazquez@penelope.iqm.unicamp.br>
 
 	* libI77/fio.h: Use off_t when appropriate.
 	* libI77/backspace.c (f_back): Ditto.
@@ -612,7 +623,7 @@ Wed Jul 18 11:14:33 2001  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 	file atomically.
 
 2000-07-03  Donn Terry  (donnte@microsoft.com)
-        * libU77/aclocal.m4: check for 2 argument gettimeofday without
+	* libU77/aclocal.m4: check for 2 argument gettimeofday without
 	struct timezone
 
 2000-07-02  Toon Moene  <toon@moene.indiv.nluug.nl>
